add ApiUrl to .env file

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_GOOGLE_CLIENT_ID = 264749906853-p35jv7a4f8v3jvf3tsihqccrv6audtu8.apps.googleusercontent.com
+
+VITE_REQRES_API_URL = "https://reqres.in/api"
