--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,9 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-
+    "paths" :{
+      "@mui/styled-engine-sc": ["./node_modules/@mui/styled-engine-sc"]
+    },
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
