--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/x-data-grid": "^7.3.0",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.3",
+    "antd": "^5.16.4",
     "axios": "^1.6.8",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
