--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: 'Installing deps'    
-      run: npm
+      run: npm install
     - name: 'Test'
       run: npm test
     - name: 'Build'
